[FINAL]--- Finalization of the finalized product. Editted button, reworded content, further edits to media queury to ensure tablet view wasoperable.

--- a/aboutus/aboutus.html
+++ b/aboutus/aboutus.html
@@ -14,45 +14,49 @@
         <div>
         <a href="../index.html"><img class="logo" src="CFA-icon.png" alt="Home"></a>
         </div>
-        <li class="nav_list"><a href="aboutus.html">About us</a></li>
+        <li class="nav_list"><a href="aboutus.html">About Us</a></li>
         <li class="nav_list"><a href="/donatepage/donate.html">Donate</a></li>
         <li class="nav_list"><a href="/ourteam/our_team.html">Our Team</a></li>
-        <li class="nav_list"><a href="/getinvolved/getinvolved.html">Get involve</a></li>
+        <li class="nav_list"><a href="/getinvolved/getinvolved.html">Get Involved</a></li>
       </ul>
     </nav>
-  </header>
+</header>
 
 <main>
     <div class="main_content" id="h1_aboutus">
         <div class="h1_aboutus--heading">
-            <h1>About Us</h1>
-            <p class="h1_description">CheckUp For All is a nonprofit organization dedicated to ensuring that everyone — regardless of income, background, or insurance status — has access to basic and preventive health checkups.</p>
+            <h1><span> About Us </span> </h1>
+            <p class="h1_description">Checkup For All is a nonprofit organization dedicated to helping low-income families. 
+                We spread awareness in our local communities about the lack of accessible & affordable healthcare. 
+                Checkup For All also serves these underserved communities with the resources they need, be it financial or health literacy. 
+                At Checkup For All, we believe healthcare shouldn't be a luxury.
+            </p>
             <img src="docvisit.jpg" class="doc_img">    
         </div>
     </div>
 
         <div class="h2_mission">
-            <h2>Mission Statement</h2>
+            <h2><span> Mission Statement </span></h2>
             <p>Making preventive healthcare accessible to low-income and uninsured individuals by providing free or affordable checkups, screening and health education.</p>
             <img src="healthicon.jpg" class="health_img">
         </div>
 
         <div class="h3_why">
-            <h3>What is Checkup For All?</h3>
+            <h3><span>What is Checkup For All?</span></h3>
             <p> 
             Many low-income households do not have adequate access to annual wellness appointments; That's where Checkup For All comes in.
             Checkup For All is a non-profit organization who serves low-income households with a guarantee in healthcare check ups. 
             We provide a no-cost annual check ups at any hospital network.
-            Whether uninsured or insured, we also provide finacial assitance for further wellness appointments & emergency visits.
+            Whether uninsured or insured, we also provide financial assistance for further wellness appointments & emergency visits.
             Checkup For All also hosts events that offer education in healthcare and wellness. Including wellness workshops & fundraising events.
             We are always accepting volunteers to join us at our wellness workshops and fundraising events!
-            At Checkup For All, we believe healthcare shouldn't be a luxury.</p>
+            </p>
         </div>
 
         <div class="h3_help">
-            <h3 class="h3_help--heading">How You Can Help</h3>
+            <h3 class="h3_help--heading"><span> How You Can Help </span></h3>
             <p>By donating or volunteering you can support our cause.</p>
-            <button class="donate_button">Donate</button>
+            <a href="/donatepage/donate.html"><button class="donate_button">Donate</button></a>
         </div>
 </main>
 
