changes in about us

--- a/ourteam/our_team.html
+++ b/ourteam/our_team.html
@@ -136,7 +136,7 @@
                 <p class="bio_description"> My name is Jhoana and I have a great passion for serving underrepresented communities. 
                 With these new skills that I am gaining throughout the apprencticeship, I hope to help bring awareness and share information just as I am right now. 
                 Checkup For All is more than a passion project but something that I truely hold dear, As I was once in those communities we are surving, and I believe 
-                that anyone regardless of income or background deserves acces to basic healthcare needs.</p>
+                that anyone regardless of income or background deserves access to basic healthcare needs.</p>
             </div>
         </section>
    </div>
