[UPDATE]--- grammar edits & updated bio for alex.

--- a/ourteam/our_team.html
+++ b/ourteam/our_team.html
@@ -122,10 +122,11 @@
             <img class="bio_pic Alexander" src="2J5A3200.jpg" alt="Alexander">
             <div class="bio_text">
                  <h1>Alexander Irizarry</h1>
-                 <p class="bio_description">My name is Alexander and I am interested in all things tech related!
-                 I have always enjoyed exploring our rapidly changing landscape in technology. 
-                 Throughout my years at Central Piedmont Community College, I have developed skill sets in both hardware and software; giving me a solid foundation in technology. 
-                 In my role as a coding apprentice, I am reaching towards improving my software skills and learning new technologies</p>
+                 <p class="bio_description">Hello, my name is Alexander and I am passionate about helping those in need. 
+                    Throughout my life, I have noticed struggles & stigmas within my household in receiving aid in healthcare. 
+                    At Checkup For All, I wanted to make that difference and change the tides for underserved communities. 
+                    I firmly believe in our mission in uplifting those who cannot receive help in healthcare. 
+                    At Checkup For All, I feel like I am moving towards my ambition in making a difference in the world. </p>
              </div>
          </section>
 
@@ -135,8 +136,8 @@
                 <h1>Jhoana Peralta</h1>
                 <p class="bio_description"> My name is Jhoana and I have a great passion for serving underrepresented communities. 
                 With these new skills that I am gaining throughout the apprencticeship, I hope to help bring awareness and share information just as I am right now. 
-                Checkup For All is more than a passion project but something that I truely hold dear, As I was once in those communities we are surving, and I believe 
-                that anyone regardless of income or background deserves acces to basic healthcare needs.</p>
+                Checkup For All is more than a passion project but something that I truly hold dear, As I was once in those communities we are serving, and I believe 
+                that anyone regardless of income or background deserves access to basic healthcare needs.</p>
             </div>
         </section>
    </div>
