--- a/getinvolved/getinvolved.html
+++ b/getinvolved/getinvolved.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="producs.css">
     <link rel="stylesheet" href="get involved.css">
     <title>Products</title>
 </head>
@@ -35,7 +34,7 @@
                     Whether it’s through volunteering, creating a fundraiser, attending a event or supporting us on
                     social media, when you get involved with Checkup For All, you can help make a difference.
                 </p>
-                <button><a href="">Donate</a></button>
+                <button><a href="/donatepage/donate.html">Donate</a></button>
             </div>
         </div>
 
