--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav>
       <ul>
         <div>
-        <img class="logo" src="logo.png" alt="">
+        <img class="logo" src="whitelogo.png" alt="">
         </div>
       
         <li><a href="aboutus/aboutus.html">About us</a></li>
@@ -67,7 +67,7 @@
          </div>
     </div>
          <div class="donate">
-             <button><a href="#">Donate</a></button> 
+             <a href="/donatepage/donate.html"><button><a href="#">Donate</a></button></a>
           </div>   
       </div>
 
