--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav>
       <ul>
         <div>
-        <img class="logo" src="whitelogo.png" alt="">
+        <img class="logo" src="logo.png" alt="logo">
         </div>
       
         <li><a href="aboutus/aboutus.html">About us</a></li>
